--- a/practice4-2.html
+++ b/practice4-2.html
@@ -15,9 +15,9 @@
             <tr><th>페루</th><th>필리핀</th><th>호주</th></tr>
         </tfoot>
         <tbody>
-            <tr><td><img src="media21/apple.png"></td>
-                <td><img src="media21/banana.png"></td>
-                <td><img src="media21/mango.png"></td></tr>
+            <tr><td><img src="media/apple.png"></td>
+                <td><img src="media/banana.png"></td>
+                <td><img src="media/mango.png"></td></tr>
         </tbody>
     </table>
 </body>
