--- a/example6-23.html
+++ b/example6-23.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>자바스크립트 전역함수</title>
+<meta charset="utf-8">
+<title>javascript 전역함수</title>
 <script>
-function evalparseIntInsNaN() {
-    let res = eval("2*3+4*6"); // res는 30
-    document.write("eval(\"2*3+4*6\")는" + res + "<br>");
-    let m = parseInt("32");
-    document.write("parseInt(\"32\")는" + m + "<br>");
-    let n = parseInt("0X32");
-    document.write("parseInt(\"0X32\")는" + n + "<br><br>");
- //hello는 정수로 변환할 수 없으므로 parseInt("hello")는  NAN 리턴
- n = parseInt("hello");
- if (isNaN(n))
- document.write("hello는 숫자가 아닙니다.");
-}
+    function evalParseIntIsNaN() {
+        let res = eval("2*3+4*6");
+        document.write("eval(\"2*3+4*6\")는" + res + "<br>");
+        let m = parseInt("32");
+        document.write("parseInt(\"32\")는" + m + "<br>");
+        let n = parseInt("0x32");
+        document.write("parseInt(\"0x32\")는" + n + "<br><br>");
+
+        n = parseInt("hello");
+        if(isNaN(n))
+            document.write("hello는 숫자가 아닙니다.");
+    }
 </script>
 </head>
 <body>
+<h3>eval(), parseInt(), isNaN()</h3> 
 <hr>
 <script>
-    evalparseIntInsNaN();
+   evalParseIntIsNaN();
 </script>
 </body>
 </html>
